package com.pis.buy2gether.model.domain.data.grup.strategy;

import com.pis.buy2gether.model.domain.pojo.Grup.Category;

public enum Parameters {
    INSTANCE;
    public Category category;
    public String filter;
}
