@startuml

title __STRATEGY's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace model.domain.data {
      namespace grup {
        namespace strategy {
          enum Parameters {
            INSTANCE
            category
            filter
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace model.domain.data {
      namespace grup {
        namespace strategy {
          class com.pis.buy2gether.model.domain.data.grup.strategy.Search {
              - grupList : MutableLiveData<ArrayList<Grup>>
              + Search()
              + search()
              + setGrups()
              + setStrategy()
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace model.domain.data {
      namespace grup {
        namespace strategy {
          class com.pis.buy2gether.model.domain.data.grup.strategy.SearchByCategory {
              + search()
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace model.domain.data {
      namespace grup {
        namespace strategy {
          class com.pis.buy2gether.model.domain.data.grup.strategy.SearchByName {
              + search()
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace model.domain.data {
      namespace grup {
        namespace strategy {
          interface com.pis.buy2gether.model.domain.data.grup.strategy.StrategySearch {
              {abstract} + search()
          }
        }
      }
    }
  }
  

  com.pis.buy2gether.model.domain.data.grup.strategy.Parameters o-- com.pis.buy2gether.model.domain.pojo.Grup.Category : category
  com.pis.buy2gether.model.domain.data.grup.strategy.Search o-- com.pis.buy2gether.model.domain.data.grup.strategy.StrategySearch : st
  com.pis.buy2gether.model.domain.data.grup.strategy.SearchByCategory .up.|> com.pis.buy2gether.model.domain.data.grup.strategy.StrategySearch
  com.pis.buy2gether.model.domain.data.grup.strategy.SearchByName .up.|> com.pis.buy2gether.model.domain.data.grup.strategy.StrategySearch


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
